# AI-Pessoal

./: CONSTITUICAO.md  ESPECIFICACAO.md  README.md  config.example.json  install.ps1  pyproject.toml  run-web.ps1  run.ps1
.cursor/rules/: ai-pessoal-guardiao.mdc
docs/: CORTANA.md  ROADMAP.md
scripts/: check_setup.py
src/ai_pessoal/: __init__.py  __main__.py  capture.py  chat.py  cli.py  config.py  cortana_bridge.py  documents.py  export_acervo.py  memory.py  ollama_client.py  recover.py  relate.py  semantic.py  session.py  session_index.py
src/ai_pessoal/static/: app.js  index.html  style.css
src/ai_pessoal/web/: __init__.py  __main__.py  app.py
tests/: test_active_project.py  test_capture.py  test_cortana_bridge.py  test_documents.py  test_export.py  test_recover.py  test_relate.py  test_semantic.py  test_session_index.py
