[project]
name = "ai-pessoal"
version = "0.1.0"
description = "Segundo cérebro local — captura, conversa Ollama, recuperação"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.0"]

[project.scripts]
ai-pessoal = "ai_pessoal.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
